Prevent pipe buffers from child processes from filling up
On Windows, the buffer between processes is 1024 bytes, so if the child process tries to write more than that it will get blocked until the parent process reads from the buffer.
Now we will have background threads that will read from the child processes to prevent this issue.